c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/extra_credit/character_const_label.c
// You can't use a character constant as a label
int main(void) {
    'x': return 0;
}